Test Add-Opens manifest.